archive/minio/tenant/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-tenant
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: baseline
    istio-injection: disabled
